--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "l0n3ly",
-  "description": "l0n3ly's portfolio",
-  "version": "0.3.5",
+  "description": "l0n3ly portfolio",
+  "version": "1.0",
   "private": true,
   "scripts": {
     "dev": "astro dev",
