--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dependencies": {
         "@craco/craco": "^6.3.0",
         "@headlessui/react": "^1.4.3",
+        "@heroicons/react": "^1.0.5",
         "craco": "^0.0.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
